# legacy-import-migrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-feedback.yml  ci.yml  labeler.yml  pr-size.yml
docs/: COMMUNITY_ANNOUNCEMENT_GUIDE.md  FEEDBACK_LOG.md  FEEDBACK_LOOP_PROCESS.md  MAINTENANCE_GUIDE.md  OPERATIONS_MANUAL.md  QUICK_REFERENCE.md  lim-runbook.md
docs/ci-feedback/: 20250827-143000-cli-path-error.md
docs/reports/: weekly.md
docs/run/: 2025-08-30T10-03JST-devcontainer-rollout.md  2025-08-30T10-14JST-devcontainer-env-check.md  2025-08-30T11-29JST-test-shell-deploy.md  2025-08-30T21-09JST-agents-wiring.md  2025-08-30T21-31JST-phase4-sustain-measure-kickoff.md  2025-08-30T21-46JST-weekly-health-bootstrap.md
examples/: ci-integration.md
examples/github-actions/: migration-progress.yml
src/legacy_import_migrator/: __init__.py  __main__.py  checker.py  tracker.py
src/legacy_import_migrator/cli/: __init__.py  baseline.py  check.py  scan.py
src/sandbox/: lim_test.py
tests/: test_tracker.py
