[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legacy-import-migrator"
version = "0.1.0"
description = "AST-based legacy import tracking and migration toolkit for Python codebases"
authors = [
    {name = "Legacy Import Migrator Team", email = "team@strataregula.com"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/strataregula/legacy-import-migrator"
Repository = "https://github.com/strataregula/legacy-import-migrator"
Issues = "https://github.com/strataregula/legacy-import-migrator/issues"

[project.scripts]
lim = "legacy_import_migrator.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "C4", "T10", "ISC", "ICN", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=legacy_import_migrator --cov-report=term-missing --cov-report=html"